# modern_cpp

./: .gitignore  README.md
compilation/: main  main.cpp  main.i  main.s
first_lib/: CMakeLists.txt  main  main.cpp  tools.cpp
homework/homework_1/solutions/task_1/: commands.sh
homework/homework_1/solutions/task_2/: CMakeLists.txt
homework/homework_1/solutions/task_2/src/: CMakeLists.txt
homework/homework_2/task_1/: CMakeLists.txt
homework/homework_2/task_1/src/: random_guess.cpp
homework/homework_2/task_2/: CMakeLists.txt
homework/homework_2/task_2/src/: file_ext.cpp
homework/homework_3/: CMakeLists.txt  create_image_browser
homework/homework_3/solutions/: test.html
homework/homework_3/solutions/src/: create_image_browser.cpp  html_writer.cpp  html_writer.hpp  image_browser.cpp  image_browser.hpp
homework/homework_4/: CMakeLists.txt
homework/homework_4/src/: CMakeLists.txt  homework_4.h
